<?xml version="1.0" encoding="utf-8"?>





<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ejemplos.mis.formulariocontactocoursera.MainActivity"
    android:weightSum="100">





        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayout_nombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_weight="10"
            >

                <EditText
                    android:id="@+id/EditText_nombreCompleto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre_completo"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/LinearLayout_Cumpleanios"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:layout_weight="40">
                <TextView
                    android:layout_height="wrap_content"
                    android:text="Fecha de Nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal" />
                <DatePicker
                    android:id="@+id/DatePicker_cumpleanios"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:calendarViewShown="false" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayout_numeroTelefonico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

                <EditText
                    android:id="@+id/EditText_numeroTelefonico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayout_correoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_weight="10"
            >

                <EditText
                    android:id="@+id/EditText_correoElectronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextInputLayout_descripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_weight="10">

                <EditText
                    android:id="@+id/EditText_descripcionContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/descripcion_contacto"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_siguiente"
            android:id="@+id/Button_Siguiente"
            android:layout_weight="25"
            />


</LinearLayout>
