<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DescripcionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/confirmar_datos"
        android:id="@+id/textView_confirmarDatos"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_datos"
        android:id="@+id/Button_EditarDatos"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/RtlOverlay.Widget.AppCompat.DialogTitle.Icon"
        android:elevation="5dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_confirmarDatos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/Button_EditarDatos">

        <!--nombre Completo-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="nombre Completo:"
                android:id="@+id/textView_textonombreCompleto"
                android:textSize="14dp"
                android:layout_below="@+id/textView_confirmarDatos"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="nombre Completo"
                android:id="@+id/textView_nombreCompleto"
                android:textSize="14dp"
                android:layout_below="@+id/textView_confirmarDatos"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </TableRow>
        <!--fecha de Nacimiento-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fecha_de_nacimiento"
                android:id="@+id/textView_textofechaDeNacmiento"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fecha_de_nacimiento"
                android:id="@+id/textView_fechaDeNacmiento"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </TableRow>
        <!--Telefono-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="telefono: "
                android:id="@+id/textView_textoTelefono"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="telefono: "
                android:id="@+id/textView_telefono"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
        </TableRow>
        <!--email-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Email: "
                android:id="@+id/textView_textoEmail"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="correo"
                android:id="@+id/textView_email"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
        </TableRow>

        <!--Descripción-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Descripcion: "
                android:id="@+id/textView_textoDescripcion"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="3dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="a Nico lo conoci"
                android:id="@+id/textView_descripcion"
                android:textSize="14dp"
                android:layout_below="@+id/textView_nombreCompleto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
        </TableRow>





</TableLayout>

</RelativeLayout>
